<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:saveEnabled="false"
    tools:context=".Forget">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/gmail_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/froget_your_password"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/enter_your_registered_email_below_to_receive_passoword_reset_instruction"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_EmailAddress_forget"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_fg"
        android:drawableStart="@drawable/ic_baseline_attach_email_forget"
        android:drawablePadding="10dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="#B3B0B0" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/Resetpassword" />

</LinearLayout>