<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main2"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Login">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/user" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Member Login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_UsernameLogin"
        android:padding="10dp"
        android:minWidth="165dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@drawable/vw_shape"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColorHint="#B3B0B0" />


    <EditText
        android:id="@+id/et_PasswordLogin"
        android:padding="10dp"
        android:minWidth="165dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/vw_shape"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="#B3B0B0" />

    <CheckBox
        android:id="@+id/ch_RememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Rmember me"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/shpe_btn"
        android:textColor="@color/white"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/txt_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/forget_your_password"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/create_an_account"
        android:textColor="#0035F4"
        android:textSize="17sp" />

</LinearLayout>